--- a/src/containers/Header/Header.css
+++ b/src/containers/Header/Header.css
@@ -2,6 +2,7 @@
     display: flex;
     justify-content: center;
     /* align-items: center; */
+    margin-bottom: 186px;
 
 }
 
@@ -13,7 +14,7 @@
 }
 
 .food-blog__header-imgs {
-
+    /* width: 50%; */
     background: url('../../assets/pizza.png');
     background-position: top right;
     background-repeat: no-repeat;
@@ -34,7 +35,6 @@
 
 .food-blog__header-content-heading h1 {
     font-family: 'Source Sans Pro';
-    font-style: normal;
     font-weight: 700;
     font-size: 62px;
     line-height: 69px;
@@ -74,6 +74,7 @@
     font-size: 18px;
     line-height: 36px;
     letter-spacing: 0.01em;
+    cursor: pointer;
 }
 
 .food-blog__header-imgs button {
@@ -95,6 +96,6 @@ line-height: 36px;
 letter-spacing: 0.03em;
 
 color: #FFFFFF;
-
+cursor: pointer;
 
 }
