--- a/src/App.css
+++ b/src/App.css
@@ -1,2 +1,2 @@
 
-  @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;500;600;700;800&family=Poppins:wght@600&family=Source+Sans+Pro:wght@400;600;700&display=swap');
+  @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;500;600;700;800&family=Poppins:wght@600;700&family=Source+Sans+Pro:wght@400;600;700&display=swap');
